--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+        <title>New Year Party</title>
     </head>
     <body>
-        
+        <header>
+            <div class="banner-container size">
+                <h5>Happy New Year</h5>
+                <h3 class="section-title">New Year Party</h3>
+                <h3 class="section-title">Celebration</h3>
+            </div>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
