--- a/index.html
+++ b/index.html
@@ -6,19 +6,36 @@
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <title>New Year Party</title>
     </head>
     <body>
+        <!-- header part -->
         <header>
             <div class="banner-container size">
-                <h5>Happy New Year</h5>
-                <h3 class="section-title">New Year Party</h3>
-                <h3 class="section-title">Celebration</h3>
+                <div class="banner-content">
+                    <p class="banner-text">Happy New Year</p>
+                    <h3 class="section-title">New Year Party</h3>
+                    <h3 class="section-title">Celebration</h3>
+                </div>
             </div>
         </header>
+        <!-- main part -->
         <main>
-
+            <!-- offer-setion -->
+            <section class="offer-section">
+                <div class="offer-content">
+                    <h3 class="offer-section-title">65% OFF</h3>
+                    <p class="offer-deal-text">OUR HOLIDAY DEALS ARE BETTER</p>
+                    <h4 class="offer-category-text">ALL CATEGORIES</h4>
+                </div>
+                <div class="offer-image">
+                    <img src="images/New Year Photo.png" alt="new-year-photo">
+                </div>
+            </section>
         </main>
         <footer>
 
