--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
                     <img src="images/New Year Photo.png" alt="new-year-photo">
                 </div>
             </section>
+            <!-- welcome party section -->
+            <section class="welcome-section size">
+                <div class="welcome-text">
+                    <h3 class="welcome-title">Welcome to midnight party</h3>
+                    <p class="welcome-massage">come to our party with your friends and family to enjoy this night and have some memorable moments</p>
+                    <h5 class="join-now">JOIN NOW</h5>
+                </div>
+                <div class="welcome-image">
+                    <img src="images/Group 70.png" alt="">
+                </div>
+            </section>
         </main>
         <footer>
 
