--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                     <img src="images/Group 70.png" alt="">
                 </div>
             </section>
+            <section class="venue size">
+                <p class="venue-text"><span class="primary-color">Place:</span> New Park hotel</p>
+                <p class="venue-text"><span class="primary-color">Date:</span> 31 December Night 2023</p>
+                <p class="venue-text"><span class="primary-color">Time:</span> Evening 7.30 Pm To 12.30 Am</p>
+                <button type="button" class="primary-button">JOIN NOW</button>
+            </section>
         </main>
         <footer>
 
