--- a/index.html
+++ b/index.html
@@ -46,12 +46,29 @@
                 <div class="welcome-image">
                     <img src="images/Group 70.png" alt="">
                 </div>
+                <!-- venue section -->
             </section>
             <section class="venue size">
                 <p class="venue-text"><span class="primary-color">Place:</span> New Park hotel</p>
                 <p class="venue-text"><span class="primary-color">Date:</span> 31 December Night 2023</p>
                 <p class="venue-text"><span class="primary-color">Time:</span> Evening 7.30 Pm To 12.30 Am</p>
                 <button type="button" class="primary-button">JOIN NOW</button>
+            </section>
+            <!-- offer section -->
+            <section class="new-year-offer-section size">
+                <div class="upcoming-offer">
+                    <p class="upcoming-offer-title">NEW BEST OFFER</p>
+                    <h2 class="upcoming-offer-heading">Coming Soon</h2>
+                    <p class="upcoming-offer-text">Our best deal to cheer-up your enjoyment and adopt your excitement to gear up you joy and happiness. Let's enjoy the deal and grave the offer. </p>
+                </div>
+                <div class="new-year-offer-image">
+                    <img src="images/Ellipse 1.png" alt="offer-image">
+                </div>
+                <div class="current-year">
+                    <h3 class="current-year-title">2024</h3>
+                    <p class="current-year-text">May this year bring you the best fitting offer to get</p>
+                    <img class="current-year-image" src="images/Group 96.png" alt="year-image">
+                </div>
             </section>
         </main>
         <footer>
