--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
                     <img class="current-year-image" src="images/Group 96.png" alt="year-image">
                 </div>
             </section>
+            <section class="holiday-section size">
+                <div class="holiday-text-section">
+                    <h5 class="holiday-title">WHAT IS FUNCTIONAL</h5>
+                    <h2 class="holiday-heading"><span class="holiday-heading-span">Holidays</span> Sale 50%</h2>
+                    <p>There is big sale program with big offers in this town,</p>
+                    <p>people come to our shop grab your perfect match get the offer then improve your initial jolly mode</p> 
+                    <p>not to be the fraction of daily dullness. </p>
+                </div>
+                <div class="holiday-image-section">
+                    <img class="holiday-image-one" src="images/Group 75.png" alt="holiday-image-one">
+                    <img class="holiday-image-two" src="images/Group 44.png" alt="holiday-image-two">
+                </div>
+            </section>
         </main>
         <footer>
 
