--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
                     <img class="holiday-image-two" src="images/Group 44.png" alt="holiday-image-two">
                 </div>
             </section>
+            <section class="portfolio-section size">
+                <div class="portfolio-text">
+                    <h5 class="portfolio-title">THE BEST GIFTS</h5>
+                    <h3 class="portfolio-heading">Our Awesome Portfolio</h3>
+                    <p class="portfolio-details">This product for the customer we released, having the users quality and contain some better fabrics for our beloved customers.</p>
+                </div>
+                <div class="portfolio-image">
+                    <div class="first-row-images">
+                        <img src="images/Rectangle 3.png" alt="image-one" class="image-size">
+                        <img src="images/Rectangle 4.png" alt="image-two" class="image-size">
+                        <img src="images/Rectangle 5.png" alt="image-three" class="image-size">
+                    </div>
+                    <div class="second-row-images">
+                        <img src="images/Rectangle 6.png" alt="image-four" class="image-size">
+                        <img src="images/Rectangle 7.png" alt="image-five" class="image-size">
+                        <img src="images/Rectangle 8.png" alt="image-six" class="image-size">
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
