--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <img class="current-year-image" src="images/Group 96.png" alt="year-image">
                 </div>
             </section>
+            <!-- holiday section -->
             <section class="holiday-section size">
                 <div class="holiday-text-section">
                     <h5 class="holiday-title">WHAT IS FUNCTIONAL</h5>
@@ -83,6 +84,7 @@
                     <img class="holiday-image-two" src="images/Group 44.png" alt="holiday-image-two">
                 </div>
             </section>
+            <!-- portfolio section -->
             <section class="portfolio-section size">
                 <div class="portfolio-text">
                     <h5 class="portfolio-title">THE BEST GIFTS</h5>
@@ -100,6 +102,19 @@
                         <img src="images/Rectangle 7.png" alt="image-five" class="image-size">
                         <img src="images/Rectangle 8.png" alt="image-six" class="image-size">
                     </div>
+                </div>
+            </section>
+            <!-- subscribe-section -->
+            <section class="subscribe-section size">
+                <div class="container">
+                    <img class="s-image" src="images/Group 61.png" alt="image-one">
+                    <h3 class="s-title">Subscribe Newsletter</h3>
+                    <p class="s-text">If you want to get the update of our shop and concerned with daily updated notification then get the subscription</p>
+                    <p class="s-text">Get the subscription, you will get the offer notification and the crazy level productions</p>
+                </div>
+                <div class="input-section">
+                    <input class="input-field" type="email" placeholder="user@gmail.com">
+                    <button class="input-label" for="email">Subscribe</button>
                 </div>
             </section>
         </main>
