--- a/index.html
+++ b/index.html
@@ -118,8 +118,47 @@
                 </div>
             </section>
         </main>
-        <footer>
-
+        <footer class="footer-section">
+            <div class="footer-up">
+                <div class="footer-up-left">
+                    <p class="all-footer-text">44,Big Building Rooseevelt Street</p>
+                    <p class="all-footer-text">Beach Gardens Florida 33410</p>
+                </div>
+                <div class="footer-up-right">
+                    <div class="call">
+                        <img src="images/Call.png" alt="call-icon">
+                        <p class="all-footer-text item-alignment">+00 123 584 124</p>
+                    </div>
+                    <div class="website">
+                        <img src="images/Website.png" alt="web-image">
+                        <p class="all-footer-text item-alignment">www.website.com</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="footer-line">
+            <div class="footer-middle">
+                <div class="image-container">
+                    <img src="images/Facebook.png" alt="" class="footer-image">
+                </div>
+                <div class="image-container">
+                    <img src="images/Instagram.png" alt="" class="footer-image">
+                </div>
+                <div class="image-container">
+                    <img src="images/Twitter.png" alt="" class="footer-image">
+                </div>
+                <div class="image-container">
+                    <img src="images/Linkedin.png" alt="" class="footer-image">
+                </div>
+            </div>
+            <hr class="footer-line-two">
+            <div class="footer-down">
+                <div class="footer-down-left all-footer-text">
+                    <p>2024, All Rights REserved.</p>
+                </div>
+                <div class="footer-down-right all-footer-text">
+                    <p>Unsubscribe</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
